# Biomechanics-RadioFrecuency

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  plan.md
ml/: _validate_p1.py  pyproject.toml  requirements.txt
ml/src/biomech_ml/: __init__.py  advanced_ssl.py  augmentation.py  benchmark.py  biomechanics_report.py  contrastive.py  dataset.py  domain_generalization.py  evaluate.py  evaluation.py  features.py  force_estimation.py  heads.py  hub.py  inference_adapter.py  inference_server.py  injury_risk_model.py  joint_angles.py  joint_displacement_tracker.py  longitudinal_risk_model.py  lora.py  model.py  onnx_export.py  personal_baseline.py  pose_inference.py  preprocessing.py  proxy_models.py  quantize.py  train.py  (+8 more)
ml/tests/: conftest.py  test_advanced_ssl.py  test_augmentation.py  test_biomechanics_report.py  test_contextual_bandit.py  test_contrastive.py  test_domain_generalization.py  test_features.py  test_force_estimation.py  test_heads.py  test_hub.py  test_injury_risk_model.py  test_joint_angles.py  test_longitudinal_risk_model.py  test_lora.py  test_model.py  test_onnx_export.py  test_personal_baseline.py  test_pose_inference.py  test_preprocessing.py  test_proxy_models.py  test_quantize.py  test_recommendation_policy.py  test_rl_baselines.py  test_rl_digital_twin.py  test_rl_evaluation.py  test_rl_logging.py  test_rl_offline.py  test_rl_policy.py  test_rl_schemas.py  test_rl_storage.py  test_stride_kinematics.py  test_synthetic_data.py  test_temporal_model.py  test_transfer_learning.py
(+463 files in other folders)
